add StringConverter